fix: uses Flexbox for centering equalizer to eliminate jittering on Firefox

--- a/src/components/ui/AudioTrack/AudioTrack.module.css
+++ b/src/components/ui/AudioTrack/AudioTrack.module.css
@@ -53,8 +53,7 @@
   }
 }
 
-.playToggle,
-.equalizer {
+.playToggle {
   width: 16px;
   height: 16px;
 }
